# TTR-Player

./: CMakeLists.txt  CPPLINT.cfg  README.md  newPlayer.txt
project/: CMakeLists.txt  main.cpp
project/impl/style/: style.css
project/impl/views/: CurrentPlaylistView.cpp  CurrentPlaylistView.hpp  CurrentTrackView.cpp  CurrentTrackView.hpp  FileSystemView.cpp  FileSystemView.hpp  LeftWallView.cpp  LeftWallView.hpp  MainWindowView.cpp  MainWindowView.hpp  TitleBarButtonsView.cpp  TitleBarButtonsView.hpp
project/lib/Controllers/: CurrentPlaylistController.cpp  CurrentPlaylistController.hpp  CurrentTrackController.cpp  CurrentTrackController.hpp  FileSystemController.cpp  FileSystemController.hpp
project/lib/Mediator/: GlobalModel.cpp  GlobalModel.hpp  Mediator.hpp
project/lib/SoundLib/: Parser.cpp  Parser.hpp  Playlist.cpp  Playlist.hpp  Track.cpp  Track.hpp
project/lib/SoundLibWithOuterDependncies/: ITrack.hpp  QTrack.cpp  QTrack.hpp
project/lib/UIModels/: CurrentPlaylistUIModel.cpp  CurrentPlaylistUIModel.hpp  CurrentTrackUIModel.cpp  CurrentTrackUIModel.hpp  FileSystemUIModel.cpp  FileSystemUIModel.hpp
